# ninja-auth

./: .gitignore  manage.py  requirements.txt
django_ninja_auth_package/: api.py  asgi.py  settings.py  urls.py  wsgi.py
django_ninja_authentication/: README.rst  setup.cfg
django_ninja_authentication/django_ninja_auth/: admin.py  api.py  authenticators.py  jwt.py  models.py  schemas.py  utils.py  validators.py
django_ninja_authentication/django_ninja_auth/migrations/: 0001_initial.py
