[METADATA]
name = django-ninja-auth
version = 0.1
author = Enzo Pascucci
author_email = enzocpascucci@gmail.com
maintainer = Enzo Pascucci
maintainer_email = enzocpascucci@gmail.com
description = Django Ninja Authentication apis and add-ons
long_description = file:README.rst
url = https://github.com/EnzoCp/django-ninja-auth
license = MIT
keywords = django django-ninja authentication api
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    TOPIC :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django==3.2.4
    django-ninja==0.13.2
    PyJWT==2.1.0